Implement ultra-optimized GPU models and comprehensive model comparison
- Added ultraoptimized_gpu_models.py with cutting-edge GPU optimization techniques for training neural networks.
- Introduced TensorCoreOptimizedNN and OptimizedGPCNN classes for efficient model architectures.
- Implemented mixed precision training, gradient accumulation, and CUDA graph support in the training loop.
- Created unified_model_comparison.py to rank various models including GP+CNN, XGBoost, and others based on performance metrics.
- Developed visualize_gpcnn_comparison.py for visualizing model performance comparisons and detailed metrics.
- Saved results in unified_model_comparison.json and visualizations in PNG/PDF formats.

--- a/notebooks/02_tls_search.ipynb
+++ b/notebooks/02_tls_search.ipynb
@@ -1,1 +1,427 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# 02_tls_search \u2014 GP \u53bb\u566a + TLS \u9031\u671f\u641c\u5c0b\uff08\u793a\u4f8b\uff09\n", "\u9700\u8981\uff1a`pip install transitleastsquares`\uff08GP\uff1a`pip install celerite2` \u6216 `starry_process`\uff09"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["import numpy as np\n", "from app.denoise.gp import denoise\n", "from app.search.tls_runner import run_tls\n", "t = np.linspace(0, 27.4, 7000)\n", "flux = 1 + 0.0005*np.sin(2*np.pi*t/13.7) + np.random.default_rng(0).normal(0, 3e-4, size=t.shape)\n", "resid, trend = denoise(t, flux, backend='auto')\n", "res = run_tls(t, 1+resid)\n", "res"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 02_tls_search — GP 去噪 + TLS 週期搜尋\n",
+    "\n",
+    "Pipeline: raw LC → GP denoising → TLS search → produce (period, t0, duration)\n",
+    "\n",
+    "Requirements:\n",
+    "- `pip install transitleastsquares` (TLS)\n",
+    "- `pip install celerite2` or `pip install starry_process` (GP, optional)\n",
+    "- `pip install lightkurve astropy` (for data loading and optional BLS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
+    "import json\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Import custom modules\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from app.denoise.gp import denoise\n",
+    "from app.search.tls_runner import run_tls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Load Light Curve Data\n",
+    "\n",
+    "Load from either:\n",
+    "- Synthetic data for testing\n",
+    "- Real TESS/Kepler data\n",
+    "- Preprocessed data from artifacts/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Option 1: Generate synthetic light curve with transit\n",
+    "def generate_synthetic_lc(n_points=7000, period=13.7, depth=0.001, duration_hours=3, noise_level=3e-4, seed=42):\n",
+    "    \"\"\"Generate synthetic light curve with transit signal.\"\"\"\n",
+    "    rng = np.random.default_rng(seed)\n",
+    "    \n",
+    "    # Time array (days)\n",
+    "    t = np.linspace(0, 27.4, n_points)\n",
+    "    \n",
+    "    # Base flux\n",
+    "    flux = np.ones_like(t)\n",
+    "    \n",
+    "    # Add transit signal (simple box model)\n",
+    "    t0 = 2.0  # Initial transit time\n",
+    "    duration_days = duration_hours / 24.0\n",
+    "    \n",
+    "    for i in range(int(t[-1] / period) + 1):\n",
+    "        transit_center = t0 + i * period\n",
+    "        in_transit = np.abs(t - transit_center) < duration_days / 2\n",
+    "        flux[in_transit] -= depth\n",
+    "    \n",
+    "    # Add stellar variability (sinusoidal)\n",
+    "    flux += 0.0002 * np.sin(2 * np.pi * t / 5.5)  # Rotation signal\n",
+    "    \n",
+    "    # Add noise\n",
+    "    flux += rng.normal(0, noise_level, size=t.shape)\n",
+    "    \n",
+    "    return t, flux\n",
+    "\n",
+    "# Generate synthetic data\n",
+    "t_synth, flux_synth = generate_synthetic_lc()\n",
+    "print(f\"Generated synthetic LC: {len(t_synth)} points over {t_synth[-1]:.1f} days\")\n",
+    "\n",
+    "# Plot raw light curve\n",
+    "plt.figure(figsize=(12, 4))\n",
+    "plt.plot(t_synth, flux_synth, 'k.', markersize=0.5, alpha=0.5)\n",
+    "plt.xlabel('Time (days)')\n",
+    "plt.ylabel('Relative Flux')\n",
+    "plt.title('Raw Light Curve')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Option 2: Load real data from artifacts (if available)\n",
+    "try:\n",
+    "    # Check for preprocessed data\n",
+    "    data_path = Path('../artifacts/preprocessed_lcs.npz')\n",
+    "    if data_path.exists():\n",
+    "        data = np.load(data_path)\n",
+    "        t_real = data['time'][0]  # First LC\n",
+    "        flux_real = data['flux'][0]\n",
+    "        print(f\"Loaded real LC: {len(t_real)} points\")\n",
+    "        \n",
+    "        # Use real data\n",
+    "        t, flux = t_real, flux_real\n",
+    "    else:\n",
+    "        print(\"No real data found, using synthetic\")\n",
+    "        t, flux = t_synth, flux_synth\n",
+    "except Exception as e:\n",
+    "    print(f\"Using synthetic data: {e}\")\n",
+    "    t, flux = t_synth, flux_synth"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. GP Denoising\n",
+    "\n",
+    "Apply Gaussian Process regression to remove stellar variability while preserving transit signals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply GP denoising\n",
+    "print(\"Applying GP denoising...\")\n",
+    "residuals, trend = denoise(t, flux, backend='auto')\n",
+    "\n",
+    "# Denoised flux\n",
+    "flux_denoised = 1 + residuals  # Add back normalized baseline\n",
+    "\n",
+    "# Visualize denoising results\n",
+    "fig, axes = plt.subplots(3, 1, figsize=(12, 8), sharex=True)\n",
+    "\n",
+    "# Original\n",
+    "axes[0].plot(t, flux, 'k.', markersize=0.5, alpha=0.5)\n",
+    "axes[0].plot(t, 1 + trend, 'r-', linewidth=2, label='GP trend')\n",
+    "axes[0].set_ylabel('Original Flux')\n",
+    "axes[0].legend()\n",
+    "\n",
+    "# Denoised\n",
+    "axes[1].plot(t, flux_denoised, 'b.', markersize=0.5, alpha=0.5)\n",
+    "axes[1].axhline(1.0, color='gray', linestyle='--', alpha=0.5)\n",
+    "axes[1].set_ylabel('Denoised Flux')\n",
+    "\n",
+    "# Residuals\n",
+    "axes[2].plot(t, residuals, 'g.', markersize=0.5, alpha=0.5)\n",
+    "axes[2].axhline(0, color='gray', linestyle='--', alpha=0.5)\n",
+    "axes[2].set_xlabel('Time (days)')\n",
+    "axes[2].set_ylabel('Residuals')\n",
+    "\n",
+    "plt.suptitle('GP Denoising Results')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"Residuals std: {np.std(residuals):.6f}\")\n",
+    "print(f\"Trend range: {np.ptp(trend):.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. TLS Period Search\n",
+    "\n",
+    "Apply Transit Least Squares to find periodic transit signals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run TLS search\n",
+    "print(\"Running TLS search...\")\n",
+    "tls_result = run_tls(t, flux_denoised)\n",
+    "\n",
+    "# Extract key parameters\n",
+    "if tls_result and hasattr(tls_result, 'period'):\n",
+    "    period_tls = tls_result.period\n",
+    "    t0_tls = tls_result.T0\n",
+    "    duration_tls = tls_result.duration\n",
+    "    depth_tls = 1 - tls_result.depth\n",
+    "    sde_tls = tls_result.SDE\n",
+    "    \n",
+    "    print(f\"\\nTLS Results:\")\n",
+    "    print(f\"  Period: {period_tls:.4f} days\")\n",
+    "    print(f\"  T0: {t0_tls:.4f} days\")\n",
+    "    print(f\"  Duration: {duration_tls:.4f} days ({duration_tls*24:.2f} hours)\")\n",
+    "    print(f\"  Depth: {(1-depth_tls)*1e6:.1f} ppm\")\n",
+    "    print(f\"  SDE: {sde_tls:.2f}\")\n",
+    "    \n",
+    "    # Plot TLS periodogram\n",
+    "    fig, axes = plt.subplots(2, 1, figsize=(12, 8))\n",
+    "    \n",
+    "    # Periodogram\n",
+    "    if hasattr(tls_result, 'periods') and hasattr(tls_result, 'power'):\n",
+    "        axes[0].plot(tls_result.periods, tls_result.power, 'b-')\n",
+    "        axes[0].axvline(period_tls, color='r', linestyle='--', label=f'Best period: {period_tls:.4f} d')\n",
+    "        axes[0].set_xlabel('Period (days)')\n",
+    "        axes[0].set_ylabel('SDE')\n",
+    "        axes[0].set_title('TLS Periodogram')\n",
+    "        axes[0].legend()\n",
+    "        axes[0].grid(True, alpha=0.3)\n",
+    "    \n",
+    "    # Phase-folded light curve\n",
+    "    phase = (t - t0_tls) % period_tls / period_tls\n",
+    "    phase[phase > 0.5] -= 1.0\n",
+    "    \n",
+    "    axes[1].plot(phase, flux_denoised, 'k.', markersize=0.5, alpha=0.3)\n",
+    "    \n",
+    "    # Bin the phase-folded data\n",
+    "    n_bins = 100\n",
+    "    phase_bins = np.linspace(-0.5, 0.5, n_bins + 1)\n",
+    "    binned_flux = []\n",
+    "    binned_phase = []\n",
+    "    for i in range(n_bins):\n",
+    "        mask = (phase >= phase_bins[i]) & (phase < phase_bins[i+1])\n",
+    "        if np.any(mask):\n",
+    "            binned_flux.append(np.median(flux_denoised[mask]))\n",
+    "            binned_phase.append((phase_bins[i] + phase_bins[i+1]) / 2)\n",
+    "    \n",
+    "    axes[1].plot(binned_phase, binned_flux, 'ro-', markersize=3, linewidth=1)\n",
+    "    axes[1].axhline(1.0, color='gray', linestyle='--', alpha=0.5)\n",
+    "    axes[1].set_xlabel('Phase')\n",
+    "    axes[1].set_ylabel('Relative Flux')\n",
+    "    axes[1].set_title(f'Phase-folded LC (P={period_tls:.4f} d)')\n",
+    "    axes[1].grid(True, alpha=0.3)\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"TLS search failed or no signal found\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Optional: BLS Cross-validation\n",
+    "\n",
+    "Use Box Least Squares from Astropy for comparison and cross-validation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional BLS search for cross-validation\n",
+    "try:\n",
+    "    from astropy.timeseries import BoxLeastSquares\n",
+    "    from astropy import units as u\n",
+    "    \n",
+    "    print(\"\\nRunning BLS for cross-validation...\")\n",
+    "    \n",
+    "    # Create BLS model\n",
+    "    bls = BoxLeastSquares(t * u.day, flux_denoised)\n",
+    "    \n",
+    "    # Search periods from 0.5 to 20 days\n",
+    "    period_grid = np.exp(np.linspace(np.log(0.5), np.log(20), 1000))\n",
+    "    bls_result = bls.power(period_grid * u.day, 0.05, oversample=20)\n",
+    "    \n",
+    "    # Find best period\n",
+    "    best_idx = np.argmax(bls_result.power)\n",
+    "    period_bls = bls_result.period[best_idx].value\n",
+    "    t0_bls = bls_result.transit_time[best_idx].value\n",
+    "    duration_bls = bls_result.duration[best_idx].value\n",
+    "    depth_bls = bls_result.depth[best_idx]\n",
+    "    snr_bls = bls_result.depth_snr[best_idx]\n",
+    "    \n",
+    "    print(f\"\\nBLS Results:\")\n",
+    "    print(f\"  Period: {period_bls:.4f} days\")\n",
+    "    print(f\"  T0: {t0_bls:.4f} days\")\n",
+    "    print(f\"  Duration: {duration_bls:.4f} days ({duration_bls*24:.2f} hours)\")\n",
+    "    print(f\"  Depth: {depth_bls*1e6:.1f} ppm\")\n",
+    "    print(f\"  SNR: {snr_bls:.2f}\")\n",
+    "    \n",
+    "    # Compare TLS vs BLS\n",
+    "    if 'period_tls' in locals():\n",
+    "        print(f\"\\n=== TLS vs BLS Comparison ===\")\n",
+    "        print(f\"Period difference: {abs(period_tls - period_bls):.4f} days\")\n",
+    "        print(f\"T0 difference: {abs(t0_tls - t0_bls):.4f} days\")\n",
+    "        print(f\"Duration difference: {abs(duration_tls - duration_bls)*24:.2f} hours\")\n",
+    "    \n",
+    "    # Plot BLS periodogram\n",
+    "    plt.figure(figsize=(12, 4))\n",
+    "    plt.plot(bls_result.period, bls_result.power, 'g-', label='BLS')\n",
+    "    plt.axvline(period_bls, color='g', linestyle='--', alpha=0.7, label=f'BLS: {period_bls:.4f} d')\n",
+    "    if 'period_tls' in locals():\n",
+    "        plt.axvline(period_tls, color='r', linestyle='--', alpha=0.7, label=f'TLS: {period_tls:.4f} d')\n",
+    "    plt.xlabel('Period (days)')\n",
+    "    plt.ylabel('Power')\n",
+    "    plt.title('BLS Periodogram')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "    plt.show()\n",
+    "    \n",
+    "except ImportError:\n",
+    "    print(\"Astropy not installed, skipping BLS cross-validation\")\n",
+    "except Exception as e:\n",
+    "    print(f\"BLS search failed: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Save Results\n",
+    "\n",
+    "Save the transit parameters for use in CNN training and inference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare results dictionary\n",
+    "results = {\n",
+    "    'tls': {},\n",
+    "    'bls': {},\n",
+    "    'metadata': {\n",
+    "        'n_points': len(t),\n",
+    "        'time_span': float(t[-1] - t[0]),\n",
+    "        'cadence': float(np.median(np.diff(t)) * 24 * 60),  # in minutes\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Add TLS results\n",
+    "if 'period_tls' in locals():\n",
+    "    results['tls'] = {\n",
+    "        'period': float(period_tls),\n",
+    "        't0': float(t0_tls),\n",
+    "        'duration': float(duration_tls),\n",
+    "        'depth_ppm': float((1-depth_tls)*1e6),\n",
+    "        'sde': float(sde_tls)\n",
+    "    }\n",
+    "\n",
+    "# Add BLS results\n",
+    "if 'period_bls' in locals():\n",
+    "    results['bls'] = {\n",
+    "        'period': float(period_bls),\n",
+    "        't0': float(t0_bls),\n",
+    "        'duration': float(duration_bls),\n",
+    "        'depth_ppm': float(depth_bls*1e6),\n",
+    "        'snr': float(snr_bls)\n",
+    "    }\n",
+    "\n",
+    "# Save to JSON\n",
+    "output_dir = Path('../artifacts')\n",
+    "output_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "output_file = output_dir / 'transit_search_results.json'\n",
+    "with open(output_file, 'w') as f:\n",
+    "    json.dump(results, f, indent=2)\n",
+    "\n",
+    "print(f\"\\nResults saved to {output_file}\")\n",
+    "print(json.dumps(results, indent=2))\n",
+    "\n",
+    "# Also save denoised light curve\n",
+    "lc_file = output_dir / 'denoised_lc.npz'\n",
+    "np.savez_compressed(\n",
+    "    lc_file,\n",
+    "    time=t,\n",
+    "    flux_raw=flux,\n",
+    "    flux_denoised=flux_denoised,\n",
+    "    gp_trend=trend if 'trend' in locals() else None\n",
+    ")\n",
+    "print(f\"Light curve saved to {lc_file}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Summary\n",
+    "\n",
+    "This notebook demonstrates the complete TLS search pipeline:\n",
+    "1. Light curve loading/generation\n",
+    "2. GP denoising to remove stellar variability\n",
+    "3. TLS period search for transit detection\n",
+    "4. Optional BLS cross-validation\n",
+    "5. Results saved for downstream CNN training\n",
+    "\n",
+    "The transit parameters (period, t0, duration) will be used in the next step (03b_cnn_train.ipynb) to create global and local views for CNN training."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
